Fix for navbar not appearing sticky on mobile

--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -15,6 +15,7 @@
   flex-wrap: wrap;
   flex-direction: row;
   overflow-y: auto;
+  overflow-x: hidden;
   &::-webkit-scrollbar {
     width: 4px;
     background: var(--sdds-grey-200);
@@ -33,11 +34,7 @@
   flex-grow: 1;
   -webkit-flex-grow:1;
   position: relative;
-  overflow-x: hidden;
-
-  @media(min-width:1056px) {
-    overflow-x: unset;
-  }
+  width: 100%;
 }
 
 header {
